src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_version-21.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%YAML 1.9999999999999\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: "1.9999999999999"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 21
      line: 0
      column: 21
- severity: error
  message: invalid version number
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 21
      line: 0
      column: 21
  stream: "9999999999999"
- value:
    version: ~
    tags: {}

