src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_version-5.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%YAML 0\\n\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: "0"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- severity: error
  message: "expected '.', but reached end of line"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 7
      line: 0
      column: 7
  stream: ""
- value:
    version: ~
    tags: {}
- remainder: "\n"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 1
      column: 0

