src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_version-8.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%YAML 0.\\n\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: "0."
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 8
      line: 0
      column: 8
- severity: error
  message: "expected a decimal digit (0-9), but reached end of line"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 8
      line: 0
      column: 8
  stream: ""
- value:
    version: ~
    tags: {}
- remainder: "\n"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 1
      column: 0

